build(deps): add go_router

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter:
     sdk: flutter
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_lints: ^6.0.0
