--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   go_router: ^17.0.0
 
 dev_dependencies:
+  build_runner: ^2.0.0
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
