--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^17.0.0
+  url_launcher: ^6.0.0
 
 dev_dependencies:
   build_runner: ^2.0.0
