refactor: update application name

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "avon_battalion_boys_brigade",
-    "short_name": "avon_battalion_boys_brigade",
+    "name": "Avon Battalion Boys' Brigade",
+    "short_name": "Avon Battalion Boys' Brigade",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
